--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -34,6 +34,7 @@ jobs:
           echo ${{ secrets.MONDOO_CLIENT }} > creds.yaml
           kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
           kubectl apply -f config/samples/k8s_v1alpha1_mondooclient.yaml
+          sleep 5
       - name: Verify a Kubernetes Application
         run: |
           curl -sSL http://mondoo.io/download.sh | bash
