data --> spec for olm integration
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/samples/k8s_v1alpha1_mondooclient.yaml
+++ b/config/samples/k8s_v1alpha1_mondooclient.yaml
@@ -3,7 +3,7 @@ kind: MondooClient
 metadata:
   name: mondoo-client
   namespace: mondoo-operator-system
-data:
+spec:
   workloads:
     enable: true
     workloadserviceaccount: mondoo-operator-workload
