--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -33,6 +33,8 @@ jobs:
           echo ${{ secrets.MONDOO_CLIENT }} > creds.yaml
           kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
           kubectl apply -f config/samples/k8s_v1alpha1_mondooclient.yaml
+          sleep 10
+          kubectl get pods --show-labels --namespace mondoo-operator-system
           kubectl wait --for=condition=ready pod -l app=mondoo --namespace mondoo-operator-system --timeout=10s
       - name: Verify a Kubernetes Application
         run: |
