--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -22,49 +22,22 @@ jobs:
         uses: medyagh/setup-minikube@master
       - name: Try the cluster !
         run: kubectl get pods -A
-      - name: Build controller and bundle images
+      - name: Build image
         run: |
+          export SHELL=/bin/bash
           eval $(minikube -p minikube docker-env)
-          make docker-build 
-          make bundle-build
-      - name: Get operator-sdk
+          make docker-build
+      - name: Deploy to minikube
         run: |
-          export ARCH=$(case $(uname -m) in x86_64) echo -n amd64 ;; aarch64) echo -n arm64 ;; *) echo -n $(uname -m) ;; esac)
-          export OS=$(uname | awk '{print tolower($0)}')
-          export OPERATOR_SDK_DL_URL=https://github.com/operator-framework/operator-sdk/releases/download/v1.17.0
-          curl -LO ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH}
-          gpg --keyserver keyserver.ubuntu.com --recv-keys 052996E2A20B5C7E
-          curl -LO ${OPERATOR_SDK_DL_URL}/checksums.txt
-          curl -LO ${OPERATOR_SDK_DL_URL}/checksums.txt.asc
-          gpg -u "Operator SDK (release) <cncf-operator-sdk@cncf.io>" --verify checksums.txt.asc
-          grep operator-sdk_${OS}_${ARCH} checksums.txt | sha256sum -c -
-          chmod +x operator-sdk_${OS}_${ARCH} && sudo mv operator-sdk_${OS}_${ARCH} /usr/local/bin/operator-sdk
-      - name: Deploy to minikube with olm
-        run: |
-          operator-sdk olm install
-          kubectl create namespace mondoo-operator-system
+          make deploy
           echo ${{ secrets.MONDOO_CLIENT }} > creds.yaml
           kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
-          make deploy-olm --namespace mondoo-operator-system
           kubectl apply -f config/samples/k8s_v1alpha1_mondooclient.yaml
-      - name: Verify olm installation
+      - name: Verify a Kubernetes Application
         run: |
           curl -sSL http://mondoo.io/download.sh | bash
           mv mondoo /usr/local/bin/ 
           make test/deployment
-          operator-sdk olm uninstall
-          make undeploy
-      - name: Deploy to minikube with kubectl
-        run: |
-          kubectl create namespace mondoo-operator-system
-          echo ${{ secrets.MONDOO_CLIENT }} > creds.yaml
-          kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
-          make deploy
-          kubectl apply -f config/samples/k8s_v1alpha1_mondooclient.yaml
-      - name: Verify kubectl installation 
-        run: |
-          make test/deployment
-          make undeploy
 
   # Added to summarize the matrix and allow easy branch protection rules setup
   e2e-tests-result:
