--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -48,7 +48,7 @@ jobs:
         run: |
           kubectl create namespace mondoo-operator-system
           kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
-          helm install mondoo-operator ./chart --namespace mondoo-operator-system -set controllerManager.manager.image.tag=v0.0.1
+          helm install mondoo-operator ./chart --namespace mondoo-operator-system --set controllerManager.manager.image.tag=v0.0.1
           kubectl apply -f config/samples/k8s_v1alpha1_mondooclient.yaml
       - name: Verify helm installation 
         run: |
