--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -35,6 +35,7 @@ jobs:
           kubectl apply -f config/samples/k8s_v1alpha1_mondooclient.yaml
       - name: Verify a Kubernetes Application
         run: |
+          sleep 20
           curl -sSL http://mondoo.io/download.sh | bash
           mv mondoo /usr/local/bin/ 
           make test/deployment
