--- a/config/rbac/mondooclient_viewer_role.yaml
+++ b/config/rbac/mondooclient_viewer_role.yaml
@@ -1,13 +1,13 @@
-# permissions for end users to view mondooclients.
+# permissions for end users to view mondooauditconfigs.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: mondooclient-viewer-role
+  name: mondooauditconfig-viewer-role
 rules:
 - apiGroups:
   - k8s.mondoo.com
   resources:
-  - mondooclients
+  - mondooauditconfigs
   verbs:
   - get
   - list
@@ -15,6 +15,6 @@ rules:
 - apiGroups:
   - k8s.mondoo.com
   resources:
-  - mondooclients/status
+  - mondooauditconfigs/status
   verbs:
   - get
