🧹use git sha for versionized builds (#68)
We tagging everything with git sha's in our build so that we have unique builds. This allows simpler testing in CI.

Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -13,4 +13,4 @@ kind: Kustomization
 images:
 - name: controller
   newName: ghcr.io/mondoolabs/mondoo-operator
-  newTag: v0.0.1
+  newTag: sha256-c79f8cd12b348b79b5f75e2f0497df3fb9601e7a.sigs
