--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -49,7 +49,7 @@ jobs:
         run: |
           kubectl create namespace mondoo-operator-system
           kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
-          export IMG_TAG=sha256-$(shell git rev-parse HEAD).sig
+          export IMG_TAG=sha256-$(git rev-parse HEAD).sig
           helm install mondoo-operator ./chart --namespace mondoo-operator-system --set controllerManager.manager.image.tag=$IMG_TAG
           kubectl apply -f config/samples/k8s_v1alpha1_mondooclient.yaml
       - name: Verify helm installation 
