--- a/config/rbac/mondooauditconfig_viewer_role.yaml
+++ b/config/rbac/mondooauditconfig_viewer_role.yaml
@@ -1,24 +1,20 @@
-# permissions for end users to edit mondooclients.
+# permissions for end users to view mondooauditconfigs.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: mondooclient-editor-role
+  name: mondooauditconfig-viewer-role
 rules:
 - apiGroups:
   - k8s.mondoo.com
   resources:
-  - mondooclients
+  - mondooauditconfigs
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - k8s.mondoo.com
   resources:
-  - mondooclients/status
+  - mondooauditconfigs/status
   verbs:
   - get
