Changes according to new config
Signed-off-by: Harsha <harshaisgud@gmail.com>

--- a/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
@@ -6,9 +6,8 @@ metadata:
 spec:
   workloads:
     enable: true
-    workloadserviceaccount: mondoo-operator-workload
-    replicas: 1
+    serviceAccount: mondoo-operator-workload
   nodes:
     enable: true
-  mondoosecretref: mondoo-client
+  mondooSecretRef: mondoo-client
   
