--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -52,6 +52,7 @@ jobs:
           kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
           export VERSION=sha256-$(git rev-parse HEAD).sig
           helm install mondoo-operator ./chart --namespace mondoo-operator-system --set controllerManager.manager.image.tag=$VERSION
+          kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify a Kubernetes Application
         run: |
           sleep 20
