fixing namechanges made to main
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/bundle/manifests/mondoo-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/mondoo-operator.clusterserviceversion.yaml
@@ -12,14 +12,14 @@ metadata:
             "namespace": "mondoo-operator-system"
           },
           "spec": {
-            "mondoosecretref": "mondoo-client",
+            "mondooSecretRef": "mondoo-client",
             "nodes": {
               "enable": true
             },
             "workloads": {
               "enable": true,
               "replicas": 4,
-              "workloadserviceaccount": "mondoo-operator-workload"
+              "serviceAccount": "mondoo-operator-workload"
             }
           }
         }
