fixing namechanges made to main
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -53,8 +53,10 @@ spec:
                     type: boolean
                   inventory:
                     type: string
+                  replicas:
+                    format: int32
+                    type: integer
                   serviceAccount:
-                    description: Replicas               int32  `json:"replicas,omitempty"`
                     type: string
                 type: object
             required:
