--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -55,7 +55,7 @@ jobs:
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify a Kubernetes Application
         run: |
-          sleep 20
+          kubectl wait --for=condition=ready pod -l mondoo_cr=mondoo-client --namespace mondoo-operator-system
           curl -sSL http://mondoo.io/download.sh | bash
           mv mondoo /usr/local/bin/ 
           make test/deployment
