--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -53,10 +53,8 @@ spec:
                     type: boolean
                   inventory:
                     type: string
-                  replicas:
-                    format: int32
-                    type: integer
                   serviceAccount:
+                    description: Replicas               int32  `json:"replicas,omitempty"`
                     type: string
                 type: object
             required:
