--- a/config/manifests/bases/mondoo-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/mondoo-operator.clusterserviceversion.yaml
@@ -11,7 +11,7 @@ spec:
   customresourcedefinitions:
     owned:
     - description: MondooAuditConfig is the Schema for the mondooauditconfigs API
-      displayName: Mondoo Client
+      displayName: Mondoo Audit Config
       kind: MondooAuditConfig
       name: mondooauditconfigs.k8s.mondoo.com
       version: v1alpha1
