--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -35,7 +35,7 @@ jobs:
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify a Kubernetes Application
         run: |
-          kubectl wait --for=condition=Ready -l control-plane: controller-manager --all-namespaces
+          kubectl wait --for=condition=Ready pod -l control-plane=controller-manager --all-namespaces
           kubectl get pods -n mondoo-operator-system --show-labels
           kubectl wait --for=condition=Ready pod -l mondoo_cr=mondoo-client --all-namespaces
           curl -sSL http://mondoo.io/download.sh | bash
