--- a/chart/templates/mondooauditconfig-crd.yaml
+++ b/chart/templates/mondooauditconfig-crd.yaml
@@ -1,12 +1,12 @@
-
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  annotations:
-    controller-gen.kubebuilder.io/version: v0.7.0
-  creationTimestamp: null
   name: mondooauditconfigs.k8s.mondoo.com
+  annotations:
+    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "chart.fullname" . }}-
+    controller-gen.kubebuilder.io/version: v0.7.0
+  labels:
+  {{- include "chart.labels" . | nindent 4 }}
 spec:
   group: k8s.mondoo.com
   names:
@@ -39,8 +39,8 @@ spec:
               mondooSecretRef:
                 type: string
               nodes:
-                description: Config is an example field of MondooAuditConfig. Edit
-                  mondooauditconfig_types.go to remove/update
+                description: Config is an example field of MondooAuditConfig. Edit mondooauditconfig_types.go
+                  to remove/update
                 properties:
                   enable:
                     type: boolean
