--- a/.github/workflows/generate-manifests.yaml
+++ b/.github/workflows/generate-manifests.yaml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
       - "main"
-    tags:
-      - "v*"
+    tags: ["v*.*.*"]
 jobs:
   generate-manifests:
     runs-on: ubuntu-latest
