--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - "main"
-    tags:
-      - "v*"
+    tags: ["v*.*.*"]
+
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
