wip. unable to update
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
@@ -9,5 +9,6 @@ spec:
     serviceAccount: mondoo-operator-workload
   nodes:
     enable: true
+    inventory: "crash me"
   mondooSecretRef: mondoo-client
   
