--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -13,4 +13,4 @@ kind: Kustomization
 images:
 - name: controller
   newName: ghcr.io/mondoolabs/mondoo-operator
-  newTag: sha256-c79f8cd12b348b79b5f75e2f0497df3fb9601e7a.sigs
+  newTag: sha256-459267f8834ddc8fda6223e3f8a64317b384dcef.sig
