--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -12,5 +12,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: ghcr.io/mondoolabs/mondoo-operator
-  newTag: v0.0.1
+  newName: ghcr.io/mondoohq/mondoo-operator
+  newTag: sha256-d7748902611f97384cce217e19bc6c22bf7e3612.sig
