--- a/.github/workflows/generate-manifests.yaml
+++ b/.github/workflows/generate-manifests.yaml
@@ -1,6 +1,5 @@
 name: generate-manifests
 on:
-  pull_request:
   push:
     branches:
       - "main"
@@ -17,7 +16,7 @@ jobs:
       - name: Generate manifests 
         with:
           go-version: "${{ env.golang-version }}"
-      - run: make generate-manifests
+        run: make generate-manifests
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
