--- a/.github/workflows/generate-manifests.yaml
+++ b/.github/workflows/generate-manifests.yaml
@@ -12,10 +12,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Import environment variables from file
         run: cat ".github/env" >> $GITHUB_ENV
-      - uses: actions/setup-go@v2
-      - name: Generate manifests 
+      - name: Install Go
+        uses: actions/setup-go@v2
         with:
           go-version: "${{ env.golang-version }}"
+      - name: Generate manifests 
         run: make generate-manifests
       - name: Release
         uses: softprops/action-gh-release@v1
