--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -51,7 +51,7 @@ jobs:
           kubectl create namespace mondoo-operator-system
           kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
           export VERSION=sha256-$(git rev-parse HEAD).sig
-          helm install mondoo-operator ./chart --namespace mondoo-operator-system --set controllerManager.manager.image.tag=$VERSION
+          helm install mondoo-operator ./charts --namespace mondoo-operator-system --set controllerManager.manager.image.tag=$VERSION
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify a Kubernetes Application
         run: |
