adding in minikube to e2e test of olm
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -127,6 +127,14 @@ jobs:
       - build
     runs-on: ubuntu-latest
     steps:
+      - name: Start minikube
+        uses: medyagh/setup-minikube@master
+      - name: Try the cluster !
+        run: kubectl get pods -A
+      - name: Build image
+        run: |
+          export SHELL=/bin/bash
+          eval $(minikube -p minikube docker-env)
       - name: Install operator-sdk and olm
         run: |
           export ARCH=$(case $(uname -m) in x86_64) echo -n amd64 ;; aarch64) echo -n arm64 ;; *) echo -n $(uname -m) ;; esac)
